<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <com.topface.topface.ui.views.ImageViewRemote
        android:id="@+id/ivBarAvatar"
        style="@style/NavigationBarAvatar"
        android:layout_gravity="center_vertical"/>

</LinearLayout>