<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.topface.topface.ui.settings.payment_ninja.SettingsPaymentNinjaViewModel"/>
    </data>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:bindDataToCompositeAdapterWithSmoothUpdate="@{viewModel.data}"/>
</layout>