<?xml version="1.0" encoding="utf-8"?>

<com.topface.topface.ui.views.HackyDrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/loNavigationDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <FrameLayout
            android:id="@+id/fragment_content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>

    <fragment
            class="com.topface.topface.ui.fragments.MenuFragment"
            android:id="@+id/fragment_menu"
            android:layout_width="@dimen/left_menu_width"
            android:layout_height="match_parent"
            android:layout_gravity="left"/>

</com.topface.topface.ui.views.HackyDrawerLayout>
