...
    <string name="settings_photo_preloading">Preloading photos</string>
    <string name="settings_photo_preloading_summary">Preloading next photo in your album</string>
    <string name="settings_notifications_header">Notifications</string>
    <string name="settings_other_header">Other</string>
    <string name="settings_likes">Likes</string>
    <string name="settings_mutual">Mutual attractions</string>
    <string name="settings_messages">Messages</string>
    <string name="settings_guests">Guests</string>
    <string name="settings_help">Help</string>
    <string name="settings_account">Account</string>
    <string name="settings_feedback">Leave feedback</string>
    <string name="settings_about">About</string>
    <string name="settings_version">Version</string>
...
